@@ -2,7 +2,7 @@
 *
 * ALPS/looper: multi-cluster quantum Monte Carlo algorithms for spin systems
 *
-* Copyright (C) 1997-2006 by Synge Todo <wistaria@comp-phys.org>
+* Copyright (C) 1997-2007 by Synge Todo <wistaria@comp-phys.org>
 *
 * This software is published under the ALPS Application License; you
 * can use, redistribute it and/or modify it under the terms of the
@@ -70,6 +70,7 @@ int main(int argc, char** argv)
 
     looper::abstract_evaluator* evaluator =
       evaluator_factory::instance()->make_evaluator(*p);
+    evaluator->pre_evaluate(m, *p, m);
     evaluator->evaluate(m, *p, m);
     delete evaluator;
 
