@@ -1,5 +1,9 @@
-2007-03-12  Synge Todo <wistaria@comp-phys.org>
+2007-03-23  Synge Todo <wistaria@comp-phys.org>
 
+	* Added pre_evaluator.
+	
+2007-03-12  Synge Todo <wistaria@comp-phys.org>
+	
 	* [pro] Added string order parameter.
 	
 2007-02-24  Synge Todo <wistaria@comp-phys.org>
